kubernetes/catalog/uptimekuma/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/CorneliousJD/Docker-Templates/master/uptimekuma.xml
# Category: Productivity, Tools-Utilities, Network-Other
# Stars: 719 | Downloads: 153767294
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptimekuma
  namespace: uptimekuma
  labels:
    app.kubernetes.io/name: uptimekuma
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: uptimekuma
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uptimekuma
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: uptimekuma
          image: louislam/uptime-kuma
          # No environment variables defined
          ports:
            - containerPort: 3001
              protocol: TCP
              name: web-interface
          readinessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 30
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 30
            failureThreshold: 10
          volumeMounts:
            - name: uptimekuma-data-0
              mountPath: "/app/data"
            - name: uptimekuma-data-1
              mountPath: "/var/run/docker.sock"
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: uptimekuma-data-0
        persistentVolumeClaim:
          claimName: uptimekuma-data-0
      - name: uptimekuma-data-1
        persistentVolumeClaim:
          claimName: uptimekuma-data-1
---
apiVersion: v1
kind: Service
metadata:
  name: uptimekuma
  namespace: uptimekuma
  labels:
    app.kubernetes.io/name: uptimekuma
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: uptimekuma
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: web-interface
  type: ClusterIP
